--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,12 +18,10 @@ find_package(Qt6 COMPONENTS Widgets Core Gui REQUIRED)
 add_executable (${PROJECT_NAME} main.cpp)
 target_link_libraries(${PROJECT_NAME} PRIVATE Qt6::Widgets Qt6::Core Qt6::Gui)
 
-target_compile_options (${PROJECT_NAME}     PRIVATE     ${FLAGS} -O0)
+target_compile_options (${PROJECT_NAME}     PRIVATE     ${FLAGS} -Og)
 set_target_properties (${PROJECT_NAME}  PROPERTIES 
                                         CXX_STANDARD 20 
                                         CXX_STANDARD_REQUIRED ON
                                         AUTOMOC ON
                                         AUTOUIC ON
                                         AUTORCC ON)
-
-                            
