Works with qt as well

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,13 +9,16 @@ set (CMAKE_CXX_SCAN_FOR_MODULES ON)
 
 set (CMAKE_CXX_COMPILER_CLANG_SCAN_DEPS "/usr/bin/clang-scan-deps-18")
 set (FLAGS -Wall -Werror -Wextra -Wpedantic)
-#Enable Qt automatic features (moc, uic, rcc)
-#set (CMAKE_AUTOMOC ON)
-#set (CMAKE_AUTORCC ON)
-#set (CMAKE_AUTOUIC ON)
-set (CMAKE_EXPORT_COMPILE_COMMANDS ON)
+
 #Find Qt libraries
-#find_package(Qt6 COMPONENTS Widgets Core Gui REQUIRED)
+find_package(Qt6 COMPONENTS Widgets Core Gui REQUIRED)
+
+#Enable Qt automatic features (moc, uic, rcc)
+
+set (CMAKE_AUTOMOC ON)
+set (CMAKE_AUTORCC ON)
+set (CMAKE_AUTOUIC ON)
+set (CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 #MODULES
 set(ModuleInc     ${CMAKE_CURRENT_SOURCE_DIR}/Include/Category.cppm)
@@ -36,14 +39,12 @@ target_sources (${PROJECT_NAME}-lib
 )
 
 add_executable (${PROJECT_NAME} main.cpp)
-target_link_libraries(${PROJECT_NAME} PRIVATE
-                                                #Qt6::Widgets Qt6::Core Qt6::Gui
+target_link_libraries(${PROJECT_NAME} PRIVATE   Qt6::Widgets Qt6::Core Qt6::Gui
                                                 ${PROJECT_NAME}-lib
-                                                )
+)
+
 target_compile_options (${PROJECT_NAME}-lib PRIVATE     ${FLAGS} -Og)
 target_compile_options (${PROJECT_NAME}     PRIVATE     ${FLAGS} -Og)
-
-
 
 set_target_properties (${PROJECT_NAME}-lib PROPERTIES
                                         CXX_STANDARD 20
@@ -53,9 +54,9 @@ set_target_properties (${PROJECT_NAME}-lib PROPERTIES
 set_target_properties (${PROJECT_NAME}  PROPERTIES
                                         CXX_STANDARD 20
                                         CXX_STANDARD_REQUIRED ON
-                                        #AUTOMOC ON
-                                        #AUTOUIC ON
-                                        #AUTORCC ON
-                                        )
+                                        AUTOMOC ON
+                                        AUTOUIC ON
+                                        AUTORCC ON
+)
 
 set (CMAKE_VERBOSE_MAKEFILE ON)
